<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".studylist.architecturepattern.mvc.SimpleMvcPatternFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_simple_mvc_minus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text ="-1"/>

        <TextView
            android:id="@+id/tv_simple_mvc_number"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="0" />

        <Button
            android:id="@+id/btn_simple_mvc_plus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text ="+1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>